# lantern-fw

./: .gitmodules  CMakeLists.txt  release.sh  sdkconfig
.github/workflows/: dev.yml  release.yml
main/: CMakeLists.txt  main.cpp  pinout.h
main/led/: led.cpp  led.h  led_strip_encoder.cpp  led_strip_encoder.h
main/sockets/: sockets.cpp  sockets.h
variants/: lantern_v2
